Revision history for exact::class

{{$NEXT}}

1.13      2021-03-11 08:58:31-08:00 America/Los_Angeles
        - Role class_has attributes don't cross-contaminate beyond the class

1.12      2021-02-04 14:44:44-08:00 America/Los_Angeles
        - Pre-support for exact v1.15 try implementation switch

1.11      2021-01-13 11:13:36-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.10      2021-01-10 15:48:59-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.09      2020-07-30 09:35:28-07:00 America/Los_Angeles
        - Inject Class::Method::Modifiers when using class

1.08      2020-04-23 07:44:57-07:00 America/Los_Angeles
        - Allow code ref refs as a means of using callback attributes repeately

1.07      2019-11-06 11:50:09-08:00 America/Los_Angeles
        - Sub attrs in objs lazily-run to set value on first access

1.06      2019-11-05 11:17:22-08:00 America/Los_Angeles
        - Fix for new() inputs not overriding class-set attributes in all contexts

1.05      2019-10-18 14:09:01-07:00 America/Los_Angeles
        - Major refactor to more closely match Mojo::Base internal practices
        - Switch to mostly inheritance by default instead of injection of key methods
        - Depends on exact v1.10 for inheritance
        - Inheritance conducted by placing self at end of diamond inheritance list

1.04      2019-08-26 15:09:25-07:00 America/Los_Angeles
        - Reverting signatures from a test because older Perls can't do that

1.03      2019-08-26 14:38:07-07:00 America/Los_Angeles
        - Improved inheritance support of has variables
        - Changed to use "-" prepending flags for compile check w00t
        - Add back dist.ini components

1.02      2019-08-13 14:59:29-07:00 America/Los_Angeles